Feat:[공통]사용하지 않는 주석 삭제 / [AddFrag.kt]사진 선택기능 추가, 데이터 클래스에 전달 / [Contact.kt]데이터 필드 추가 / [DetailActivity.kt]Uri이미지 사용 가능하도록 내용 보강

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools">
 
-  <uses-permission-sdk-23 android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+  <uses-feature
+      android:name="android.hardware.telephony"
+      android:required="false" />
+  <uses-feature
+      android:name="android.hardware.camera"
+      android:required="false" />
+
+  <uses-permission android:name="android.permission.CALL_PHONE"/>
+  <uses-permission android:name="android.permission.SEND_SMS"/>
+  <uses-permission android:name="android.permission.CAMERA"/>
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-
-
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  <!--접근권한 추가-->
 
   <application
           android:allowBackup="true"
